--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -44,3 +44,9 @@ jobs:
       - name: 🧪 Run tests with coverage
         run: |
           poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=75 --cov-report=term --reruns 1 >> GITHUB_SUMMARY
+
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: report_output/
