--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -16,6 +16,10 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v3
 
+      - name: Cleanup artifacts before run
+        run: |
+          - rm -rf report_output/
+
       - name: 🐍 Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
