--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -16,10 +16,6 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v3
 
-      - name: Cleanup artifacts before run
-        run: |
-          rm -rf report_output/
-
       - name: 🐍 Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -52,5 +48,5 @@ jobs:
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: test-report
+          name: report-windows-${{ github.job }}-${{ github.run_number }}
           path: report_output/
