--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -48,5 +48,5 @@ jobs:
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: report-windows-${{ github.job }}-${{ github.run_number }}
+          name: report-windows-${{ github.job }}-${{ github.run_number }}-${{ matrix.python-version }}
           path: report_output/
