--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: report-${{ github.job }}-${{ github.run_number }}
+          name: report-${{ github.job }}-${{ github.run_number }}-${{ matrix.python-version }}
           path: report_output/
