--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -22,6 +22,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          
+      - name: 📦 Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: 📦 Install dependencies with Poetry
+        run: |
+          poetry lock
+          poetry install --with dev
+
 
       - name: 🧪 Run selenium test and generate report using marketplace plugin
         uses: reporterplus/pytest-html-plus-action@v1
