--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: 🧪 Run tests with coverage
         run: |
-          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=75 --cov-report=term --reruns 1 --ignore=tests/browser >> $GITHUB_SUMMARY
+          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=75 --cov-report=term --reruns 1 --ignore=tests/browser
 
       - name: Upload HTML Report
         if: always()
