Fix generate xml throwing exception
1. Fix xml creation and handle exceptions
2. Add xml creation step in actions to spot such errors

--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -41,6 +41,7 @@ jobs:
           capturescreenshots: "all"
           testpath: "tests/browser/test_playwright.py"
           usepoetry: "true"
+          xmlreport: "report_output_playwright/report.xml"
 
       - name: Upload reports
         if: always()
