--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -43,7 +43,8 @@ jobs:
 
       - name: 🧪 Run tests with coverage
         run: |
-          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --xml-report report_output/final_xml_windows.xml
+          export REPORT_BRANCH="$(git rev-parse --abbrev-ref HEAD)"
+          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --xml-report report_output/final_xml_windows.xml --git-branch "$REPORT_BRANCH"
 
       - name: Upload HTML Report
         if: always()
