163 initalization is delayed and time taken to launch tests reopen with git enabled (#166)
* Get git information from cli and update docs

* Update unit tests

* Update actions

* Updated checkout to v2 for reporterplus

--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -35,13 +35,14 @@ jobs:
           poetry run playwright install --with-deps
       
       - name: 🧪 Run playwright test and generate report using marketplace plugin
-        uses: reporterplus/pytest-html-plus-action@v1
+        uses: reporterplus/pytest-html-plus-action@v2
         with:
           htmloutput: "report_output_playwright"
           capturescreenshots: "all"
           testpath: "tests/browser/test_playwright.py"
           usepoetry: "true"
           xmlreport: "report_output_playwright/report.xml"
+          gitbranch: "$(git rev-parse --abbrev-ref HEAD)"
 
       - name: Upload reports
         if: always()
