fix actions xmlpath

--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -41,7 +41,7 @@ jobs:
           capturescreenshots: "all"
           testpath: "tests/browser/test_playwright.py"
           usepoetry: "true"
-          xmlreport: "report_output_playwright/report.xml"
+          xmlreport: "report.xml"
           gitbranch: "$(git rev-parse --abbrev-ref HEAD)"
 
       - name: Upload reports
