--- a/.github/workflows/unit-test-windows.yml
+++ b/.github/workflows/unit-test-windows.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.13" ]
+        python-version: [ "3.11" ]
 
     steps:
       - name: 📥 Checkout code
@@ -43,11 +43,11 @@ jobs:
 
       - name: 🧪 Run tests with coverage
         run: |
-          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --xml-report report_output/final_xml_windows.xml --git-branch $(git rev-parse --abbrev-ref HEAD)
+          poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --xml-report final_xml_windows.xml --git-branch $(git rev-parse --abbrev-ref HEAD)
 
       - name: 🧪 Run tests with warnings enabled
         run: |
-          $env:PYTHONWARNINGS="error"; poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --html-output=report_output_warnings --xml-report report_output/final_xml_windows_with_warnings.xml --git-branch $(git rev-parse --abbrev-ref HEAD)
+          $env:PYTHONWARNINGS="error"; poetry run pytest --cov=pytest_html_plus tests/ --cov-fail-under=39 --cov-report=term --reruns 1 --ignore=tests/browser --generate-xml --html-output=report_output_warnings --xml-report final_xml_windows_with_warnings.xml --git-branch $(git rev-parse --abbrev-ref HEAD)
 
       - name: Upload HTML Report
         if: always()
